better, but not much

--- a/index.html
+++ b/index.html
@@ -7,11 +7,36 @@
   </head>
 
   <body>
-    Where I can be found (in order of preference):
-    <ul>
-      <li><a rel="me" href="https://hachyderm.io/@colin_rafferty">Mastodon</a>
-      <li><a rel="me" href="https://facebook.com/craffert">Facebook</a>
-      <li><a rel="me" href="https://twitter.com/colin_rafferty">Twitter</a>
-    </ul>
+    <header>
+      <h1>Colin Rafferty</h1>
+      <p>People tell me I should have a personal website.</p>
+    </header>
+
+    <main>
+      Where I can be found (in order of preference):
+      <ul>
+        <li><a rel="me" href="https://hachyderm.io/@colin_rafferty">Mastodon</a>
+        <li><a rel="me" href="https://facebook.com/craffert">Facebook</a>
+        <li><a rel="me" href="https://twitter.com/colin_rafferty">Twitter</a>
+      </ul>
+    </main>
+
+    <footer>
+      <a rel="license"
+         href="http://creativecommons.org/licenses/by-nc-nd/4.0/"
+         >
+        <img alt="Creative Commons License"
+             style="border-width:0"
+             src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png"
+             />
+      </a>
+      <br/>
+      This work is licensed under a
+      <a rel="license"
+         href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+        Creative Commons Attribution-NonCommercial-NoDerivatives 4.0
+        International License
+      </a>.
+    </footer>
   </body>
 </html>
