linkedin and verify

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <ul>
         <li><a rel="me" href="https://hachyderm.io/@colin_rafferty">Mastodon</a>
         <li><a rel="me" href="https://facebook.com/craffert">Facebook</a>
+        <li><a rel="me" href="https://www.linkedin.com/in/colinrafferty">LinkedIn</a>
         <li><a rel="me" href="https://twitter.com/colin_rafferty">Twitter</a>
       </ul>
     </main>
@@ -28,9 +29,9 @@
         <img alt="Creative Commons License"
              style="border-width:0"
              src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png"
-             />
+             >
       </a>
-      <br/>
+      <br>
       This work is licensed under a
       <a rel="license"
          href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
