--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <main>
       Where I can be found (in order of preference):
       <ul>
-        <li><a rel="me" href="https://hachyderm.io/@colin_rafferty">Mastodon</a>
+        <li>Bluesky: <a rel="me" href="https://bsky.app/profile/colin.rafferty.net">@colin.rafferty.net<a/>
+        <li>Mastodon: <a rel="me" href="https://hachyderm.io/@colin_rafferty">@colin@rafferty.net</a>
         <li><a rel="me" href="https://facebook.com/craffert">Facebook</a>
         <li><a rel="me" href="https://www.linkedin.com/in/colinrafferty">LinkedIn</a>
-        <li><a rel="me" href="https://twitter.com/colin_rafferty">Twitter</a>
+        <li>Twitter: <a rel="me" href="https://twitter.com/colin_rafferty">@colin_rafferty</a>
       </ul>
     </main>
 
