add resume from ~/Dropbox/resume/tex/@e25483f

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <li><a rel="me" href="https://www.linkedin.com/in/colinrafferty">LinkedIn</a>
         <li>Twitter: <a rel="me" href="https://twitter.com/colin_rafferty">@colin_rafferty</a>
       </ul>
+
+      <p/>
+
+      My resume: <a href="ColinRafferty.pdf">ColinRafferty.pdf</a>
     </main>
 
     <footer>
