deprecated facebook and twitter

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <ul>
         <li>Bluesky: <a rel="me" href="https://bsky.app/profile/colin.rafferty.net">@colin.rafferty.net<a/>
         <li>Mastodon: <a rel="me" href="https://hachyderm.io/@colin_rafferty">@colin@rafferty.net</a>
-        <li><a rel="me" href="https://facebook.com/craffert">Facebook</a>
         <li><a rel="me" href="https://www.linkedin.com/in/colinrafferty">LinkedIn</a>
-        <li>Twitter: <a rel="me" href="https://twitter.com/colin_rafferty">@colin_rafferty</a>
+        <li><a rel="me" href="https://facebook.com/craffert">Facebook</a> (deprecated)
+        <li>Twitter: <a rel="me" href="https://twitter.com/colin_rafferty">@colin_rafferty</a> (deprecated)
       </ul>
 
       <p/>
