--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
       Where I can be found (in order of preference):
       <ul>
+        <li>Email: <a rel="me" href="mailto:colin@rafferty.net">colin@rafferty.net</a>
         <li>Bluesky: <a rel="me" href="https://bsky.app/profile/colin.rafferty.net">@colin.rafferty.net<a/>
         <li>Mastodon: <a rel="me" href="https://hachyderm.io/@colin_rafferty">@colin@rafferty.net</a>
         <li><a rel="me" href="https://www.linkedin.com/in/colinrafferty">LinkedIn</a>
