--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <p/>
 
       My resume: <a href="ColinRafferty.pdf">ColinRafferty.pdf</a>
+      <p/>
+
+      I wrote some <a href="apps/">home-cooked apps</a>.
     </main>
 
     <footer>
