move to recurse.social

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul>
         <li>Email: <a rel="me" href="mailto:colin@rafferty.net">colin@rafferty.net</a>
         <li>Bluesky: <a rel="me" href="https://bsky.app/profile/colin.rafferty.net">@colin.rafferty.net<a/>
-        <li>Mastodon: <a rel="me" href="https://hachyderm.io/@colin_rafferty">@colin@rafferty.net</a>
+        <li>Mastodon: <a rel="me" href="https://recurse.social/@colin">@colin@rafferty.net</a>
         <li><a rel="me" href="https://github.com/craffert0">Github</a>
         <li><a rel="me" href="https://www.linkedin.com/in/colinrafferty">LinkedIn</a>
         <li><a rel="me" href="https://facebook.com/craffert">Facebook</a> (deprecated)
