update ebird alert for 2.0

--- a/apps/eBirdAlert/index.html
+++ b/apps/eBirdAlert/index.html
@@ -21,6 +21,8 @@
 
 <ul>
 <li>Select how nearby and how recent the sightings can be.</li>
+<li>Select which nearby county in which to find birds.</li>
+<li>See rarities or all birds.</li>
 <li>Open a sighting location in Apple or Google Maps.</li>
 <li>See all sighting comments for a particular location.</li>
 <li>Get identification details and photos to help you spot the bird,.</li>
@@ -34,8 +36,6 @@
 </ul>
 
 <p><a href="privacy.html">Privacy Statement</a></p>
-
-<!-- that's a placeholder -->
 
 <p><a href="https://apps.apple.com/us/app/ebirdalert/id6745479305"><img src="../Download_App_Store_en.png" alt="Download on the App Store" title="Download on the App Store" /></a></p>
 
