--- a/apps/photoTracker/index.html
+++ b/apps/photoTracker/index.html
@@ -7,12 +7,10 @@
 <head>
 <title>Photo Tracker</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-
+<link rel="stylesheet" type="text/css" media="all" href="https://cdn.simplecss.org/simple.min.css"  />
 </head>
 
 <body>
-
-<p>% (setq markdown-css-paths '("https://cdn.simplecss.org/simple.min.css"))</p>
 
 <h1>Photo Tracker</h1>
 
