--- a/apps/photoTracker/privacy.html
+++ b/apps/photoTracker/privacy.html
@@ -7,7 +7,7 @@
 <head>
 <title>Photo Tracker Privacy</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-
+<link rel="stylesheet" type="text/css" media="all" href="https://cdn.simplecss.org/simple.min.css"  />
 </head>
 
 <body>
