--- a/apps/photoTracking/index.html
+++ b/apps/photoTracking/index.html
@@ -5,16 +5,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<title>Photo Tracker</title>
+<title>Photo Tracking</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 <link rel="stylesheet" type="text/css" media="all" href="https://cdn.simplecss.org/simple.min.css"  />
 </head>
 
 <body>
 
-<h1>Photo Tracker</h1>
+<h1>Photo Tracking</h1>
 
 <p>Coming soon.</p>
+
+<p>Privacy</p>
+
+<ul>
+<li><em>Photo Tracking</em> requires your location and photo library access to add location information to your photos. It will never upload your location, or any other data, to any server.</li>
+</ul>
+
+<p><a href="privacy.html">Privacy Statement</a></p>
 
 </body>
 </html>
