--- a/apps/photoTracking/privacy.html
+++ b/apps/photoTracking/privacy.html
@@ -5,16 +5,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<title>Photo Tracker Privacy</title>
+<title>Photo Tracking Privacy</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 <link rel="stylesheet" type="text/css" media="all" href="https://cdn.simplecss.org/simple.min.css"  />
 </head>
 
 <body>
 
-<h1>Photo Tracker Privacy</h1>
+<h1>Photo Tracking Privacy</h1>
 
-<p>The <em>Photo Tracker</em> app requires location and photo library access to
+<p>The <em>Photo Tracking</em> app requires location and photo library access to
 add location information to your photos. All storage and processing is
 done on the phone itself, and no information leaves the phone.</p>
 
