photoTracking updated and Makefile

--- a/apps/photoTracking/faq.html
+++ b/apps/photoTracking/faq.html
@@ -5,16 +5,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<title>Photo Tracking Privacy</title>
+<title>Photo Tracking FAQ</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 <link rel="stylesheet" type="text/css" media="all" href="https://cdn.simplecss.org/simple.min.css"  />
 </head>
 
 <body>
 
-<h1>Photo Tracking Privacy</h1>
+<h1>Photo Tracking FAQ</h1>
 
-<p>The <em>Photo Tracking</em> app requires location and photo library access to add location information to your photos. All storage and processing is done on the phone itself, and no information leaves the phone.</p>
+<h4>How does <em>Photo Tracking</em> use my data?</h4>
+
+<p>All location tracking and photo management is done on the phone, and no data is uploaded to any servers.</p>
+
+<h4>Why the locations wrong?</h4>
+
+<p>Most likely the date and time on your camera is not correct.</p>
 
 </body>
 </html>
