--- a/apps/photoTracking/index.html
+++ b/apps/photoTracking/index.html
@@ -19,7 +19,7 @@
 <p>Privacy</p>
 
 <ul>
-<li><em>Photo Tracking</em> requires your location and photo library access to add location information to your photos. It will never upload your location, or any other data, to any server.</li>
+<li><em>Photo Tracking</em> requires your location and photo library access to add location information to your photos. It will never upload your location or any other data to any server.</li>
 </ul>
 
 <p><a href="privacy.html">Privacy Statement</a></p>
