pre-release Photo Tracking

--- a/apps/index.html
+++ b/apps/index.html
@@ -21,6 +21,14 @@
 
       <p/>
 
+      <a href="photoTracking/">Photo Tracking</a>
+
+      stores your location information throughout the day, and once
+      you've synchronized your camera's photos to iCloud, it will set
+      their locations based on the timestamps in your photos.
+
+      <p/>
+
       <a href="recursed/">Recursed!</a>
 
       is your iOS integration into the Recurse Center. See who
