--- a/apps/photoTracking/faq.html
+++ b/apps/photoTracking/faq.html
@@ -22,5 +22,9 @@
 
 <p>Most likely the date and time on your camera is not correct.</p>
 
+<h4>What happens if I forget to <em>Fix Photos</em>?</h4>
+
+<p>It's okay. You can start and stop tracking as often as you like, and when you click <em>Fix Photos</em>, it will fix all photos going as far as 30 days back.</p>
+
 </body>
 </html>
