--- a/apps/photoTracking/index.html
+++ b/apps/photoTracking/index.html
@@ -14,13 +14,26 @@
 
 <h1>Photo Tracking</h1>
 
-<p>Coming soon.</p>
+<p>Take pictures with your digital camera, import them to Apple Photos, and use Photo Tracking to add locations to them.</p>
 
-<p>Privacy</p>
+<p>Do you have a digital camera that does not add location information to your photos? Do you sync your photos to Apple's iCloud? Then this is the app for you. <em>Photo Tracking</em>  will store your location information throughout the day, and once you've synchronized your camera's photos to iCloud, it will set their locations based on the timestamps in your photos.</p>
 
-<ul>
-<li><em>Photo Tracking</em> requires your location and photo library access to add location information to your photos. It will never upload your location or any other data to any server.</li>
-</ul>
+<h3>Instructions</h3>
+
+<ol>
+<li>Open the app and tap <em>Start Tracking</em>. You can now close the app.</li>
+<li>Go out and take pictures with your digital camera. Don't forget your phone.</li>
+<li>When you get home, open the app and tap <em>Stop Tracking</em>.</li>
+<li>Sync your camera to any Apple device.</li>
+<li>In the app, tap <em>Fix Photos</em></li>
+<li>Profit!</li>
+</ol>
+
+<h3>Privacy</h3>
+
+<p><em>Photo Tracking</em> requires your location and photo library access to add location information to your photos. It will never upload your location or any other data to any server.</p>
+
+<p>All location tracking and photo processing is done on your phone, and no information leaves the phone, aside from the new locations on your iCloud photos.</p>
 
 <p><a href="privacy.html">Privacy Statement</a></p>
 
